<package>
  <name>arl_ros_pkg</name>
  <version>0.0.1</version>
  <description>All ARL ROS packages</description>
  <author email="arne.hitzmann@gmail.com">Arne Hitzmann</author>

  <maintainer email="arne.hitzmann@gmail.com">Arne Hitzmann</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>arl_interfaces</run_depend>
  <run_depend>arl_controllers</run_depend>
  <run_depend>arl_hw</run_depend>
  <run_depend>arl_msgs</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
